--- a/style.css
+++ b/style.css
@@ -20,9 +20,11 @@ textarea {
 }
 button {
     width:100px;
-    height:80px;
+    height:50px;
+    font-size: large;
+    font-weight: bold;
     margin: 7px;
     border:4px #ffffff solid;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: transparent;
 }
