--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     background-color: #161125;
     width:100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input,textarea{
