--- a/style.css
+++ b/style.css
@@ -14,14 +14,18 @@ body {
 
 input,textarea{
     outline:none;
-    border:4px #3b3255 solid;
-    background-color: #27203b;
+    border: 0;
+    text-align: center;
+    background-color: #181818;
     border-radius: 5px;
+    
     resize: none;
 }
 textarea {
     width: 400px;
     height: 200px;
+    background-color: #1b1b1b;
+
 }
 button {
     width:100px;
@@ -32,6 +36,13 @@ button {
     border:4px #ffffff solid;
     border-radius: 15px;
     background-color: transparent;
+    transition: width height 1s ease-in-out;
+}
+button:hover{
+    width: 98px;
+    height:48px;
+
+
 }
 #tool {
     display:flex;
@@ -39,7 +50,38 @@ button {
     align-items: center;
     justify-content: center;
     padding:40px;
-    background-color: #1c1729;
+    background-color: #0f0f0f;
     width: fit-content;
     height: fit-content;
+    border-radius: 20px;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.5);
+    position: relative;
+}
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+#tool::after, #tool::before{
+    content: '';
+    border-radius: 20px;
+    padding: 6px;
+    z-index: -1;
+    width:100%;
+    height: 100%;
+    position: absolute;
+    background-image: conic-gradient(from var(--angle),red,green,blue,red);
+    animation: 6s spin linear infinite;
+}
+@keyframes spin {
+    from{
+        --angle:0deg;
+    }
+    to{
+        --angle:360deg;
+    }
+}
+
+#tool::before {
+    filter: blur(1.5rem);
 }
